# jacky

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLOUD_INTEGRATION_TEST_PLAN.md  CLOUD_SQUAD_QUICKSTART.md  CODING_AGENT_TIER.md  COLLECTOR_SETUP.md  CONDENSER_ADVERSARY.md  CONDENSER_BENCHMARK.md  GET_GROQ_KEY_GUIDE.md  GITHUB_SETUP.md  JACKY_READY.txt  KNOWLEDGE_SYSTEM_INTEGRATION.md  LICENSE  OPERATIONAL_GUIDE.md  POWER_PANEL_GUIDE.md  PROGRESS_SCHEMATIC.txt  README.md  README_ROUTER_RAG.md  REPO_MIRROR_GUIDE.md  RESUME_HERE.md  RETURN_CHECKLIST.md  SAS_NEWCOMER_GUIDE.md  SECRETS.md  Save_Now.cmd  Start_Jacky.cmd  Start_SAS_Public.cmd  Start_SAS_Public.ps1  TUNNEL_SETUP.md  WORKSTATION_SETUP.md  cloud_client.py  cloud_router.py  condenser_adversary.py  condenser_benchmark.py  config.json  daily_efficiency_log.csv  daily_workflow.py  data_collector.py  ecps_experimental_research.py  (+30 more)
.devcontainer/: devcontainer.json
agents/: README.md  accessibility.agent.md  coder.agent.md  devops.agent.md  researcher.agent.md  tester.agent.md
bots/: analyst.json  architect.json  claude_jr.json  collector.json  condenser_bot.py  github_bot.py  impl.json  lead.json  monitor.json  monitor_bot.py  organizer.json  retriever.json  reviewer.json
compression/: ecps_codec.py
docs/: agent-roles.md  omniagent-architecture.md  omniagent.md  safety-and-verification.md  skills.md  superagent_workspace_setup.md  tools-and-mcp.md
examples/: invoke_skill.py  mcp-server-config.json  route_a_task.py  routing_demo.py  skill-invocation.md  submit_task.py  task-request.md  use_skill.py  (+1 more)
(+91 files in other folders)
