[project]
name = "jacky-omniagent"
version = "0.1.0"
description = "Jacky with OmniAgent starter assets for Copilot, MCP, skills, and specialized agents."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
